<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/MainTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/podcast_new"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="10dp"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorGrayLight"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.belyakov.vezdecodemusic.presentation.setup.views.LoadImageView
                android:id="@+id/loadImage"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.belyakov.vezdecodemusic.presentation.setup.views.SetupFieldView
                android:id="@+id/inputName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"
                app:hint="@string/podcast_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/loadImage"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/podcast_name" />

            <com.belyakov.vezdecodemusic.presentation.setup.views.SetupFieldView
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="18dp"
                app:hint="@string/podcast_description_hint"
                app:inputType="multiLine"
                app:layout_constraintTop_toBottomOf="@id/loadImage"
                app:title="@string/podcast_description" />

            <com.belyakov.vezdecodemusic.presentation.setup.views.LoadAudioView
                android:id="@+id/loadAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/inputDescription" />

            <View
                android:id="@+id/dividerMiddle"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLight"
                app:layout_constraintTop_toBottomOf="@id/loadAudio" />

            <CheckBox
                android:id="@+id/checkContent"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:paddingStart="4dp"
                android:text="@string/podcast_tag_content"
                app:layout_constraintTop_toBottomOf="@id/dividerMiddle" />

            <CheckBox
                android:id="@+id/checkExport"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:paddingStart="4dp"
                android:text="@string/podcast_tag_export"
                app:layout_constraintTop_toBottomOf="@id/checkContent" />

            <CheckBox
                android:id="@+id/checkTrailer"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:paddingStart="4dp"
                android:text="@string/podcast_tag_trailer"
                app:layout_constraintTop_toBottomOf="@id/checkExport" />

            <com.belyakov.vezdecodemusic.presentation.setup.views.SetupExpandableView
                android:id="@+id/visibilitySelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:hint="@string/visibility_all"
                app:layout_constraintTop_toBottomOf="@id/checkTrailer"
                app:title="@string/podcast_visibility" />

            <TextView
                android:id="@+id/visibilityHint"
                style="@style/SmallTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/visibility_all_hint"
                app:layout_constraintTop_toBottomOf="@id/visibilitySelector" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="36dp"
                android:enabled="false"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visibilityHint" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>