<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <TextView
        android:id="@+id/title"
        style="@style/PageTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/audio_load"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/HintTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/audio_load_hint"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/loadButton"
        style="@style/SmallOutlinedButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_start_load"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="loadButton, title, subtitle" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:src="@drawable/ic_backgrounded_micro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/podcastName"
        style="@style/NormalTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toStartOf="@id/podcastDuration"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintBottom_toBottomOf="@id/icon"
        app:layout_constraintTop_toTopOf="@id/icon" />

    <TextView
        android:id="@+id/podcastDuration"
        style="@style/SmallTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/icon"
        tools:text="59:16" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/podcast_audio_hint"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <Button
        android:id="@+id/redactButton"
        style="@style/OutlinedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_redact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadedGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:constraint_referenced_ids="icon, podcastDuration, podcastName, hint, redactButton" />
</androidx.constraintlayout.widget.ConstraintLayout>