<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/title"
        style="@style/MainTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/podcast_new"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="2dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorGrayLight"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/imageContainer"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <com.belyakov.vezdecodemusic.presentation.redact.views.PlayView
        android:id="@+id/playButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="10dp"
        app:play_icon="@drawable/ic_play"
        app:pause_icon="@drawable/ic_pause"
        android:background="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="@id/imageContainer"
        app:layout_constraintEnd_toEndOf="@id/imageContainer"
        app:layout_constraintStart_toStartOf="@id/imageContainer"
        app:layout_constraintTop_toTopOf="@+id/imageContainer" />

    <TextView
        android:id="@+id/name"
        style="@style/NormalTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageContainer"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:text="Подкаст прекрасных людей" />

    <TextView
        android:id="@+id/community"
        style="@style/SmallBlueTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"
        android:text="@string/community"
        app:layout_constraintStart_toEndOf="@id/imageContainer"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/duration"
        style="@style/MediumSecondaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toEndOf="@id/imageContainer"
        app:layout_constraintTop_toBottomOf="@id/community"
        tools:text="Длительность 59:13" />

    <View
        android:id="@+id/dividerCenter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@color/colorGrayLight"
        app:layout_constraintTop_toBottomOf="@id/imageContainer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerCenter"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/descriptionTitle"
                style="@style/NormalTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description"
                style="@style/NormalTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
                tools:text="Подкаст, который рассказывает про то, как много в мире прекрасных вещей, которые можно совершить, а также сколько людей, которые могут помочь вам в реализации ваших заветных мечт." />

            <View
                android:id="@+id/dividerBottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="14dp"
                android:background="@color/colorGrayLight"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/timecodesTitle"
                style="@style/NormalTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/podcast_content"
                android:textStyle="bold"
                android:layout_marginTop="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerBottom" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/timecodesList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/publishButton"
                app:layout_constraintTop_toBottomOf="@id/timecodesTitle" />

            <Button
                android:id="@+id/publishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="36dp"
                android:text="@string/podcast_publish"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timecodesList" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>