<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/title"
        style="@style/MainTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/podcast_redact"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="2dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorGrayLight"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/controlHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="8dp">

                    <com.belyakov.vezdecodemusic.presentation.redact.views.WaveView
                        android:id="@+id/audioControl"
                        android:layout_width="match_parent"
                        android:layout_height="122dp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.belyakov.vezdecodemusic.presentation.redact.views.PlayView
                        android:id="@+id/buttonPlay"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        app:play_icon="@drawable/ic_play"
                        app:pause_icon="@drawable/ic_pause"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/d_item_blue_background"
                        android:scaleType="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/audioControl" />

                    <com.belyakov.vezdecodemusic.presentation.redact.views.ToggleImageView
                        android:id="@+id/buttonCrop"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_scissors"
                        app:layout_constraintEnd_toStartOf="@id/buttonReverse"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@id/buttonPlay"
                        app:layout_constraintTop_toBottomOf="@id/audioControl" />

                    <com.belyakov.vezdecodemusic.presentation.redact.views.ToggleImageView
                        android:id="@+id/buttonReverse"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_revert"
                        app:layout_constraintEnd_toStartOf="@id/buttonMusic"
                        app:layout_constraintStart_toEndOf="@id/buttonCrop"
                        app:layout_constraintTop_toBottomOf="@id/audioControl" />

                    <com.belyakov.vezdecodemusic.presentation.redact.views.ToggleImageView
                        android:id="@+id/buttonMusic"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_music"
                        app:layout_constraintEnd_toStartOf="@id/buttonGrove"
                        app:layout_constraintTop_toBottomOf="@id/audioControl" />

                    <com.belyakov.vezdecodemusic.presentation.redact.views.ToggleImageView
                        android:id="@+id/buttonGrove"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_chart_grow"
                        app:layout_constraintEnd_toStartOf="@id/buttonReduce"
                        app:layout_constraintTop_toBottomOf="@id/audioControl" />

                    <com.belyakov.vezdecodemusic.presentation.redact.views.ToggleImageView
                        android:id="@+id/buttonReduce"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_chart_down"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/audioControl" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/timecodesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/podcast_timecodes"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/controlHolder" />

            <com.belyakov.vezdecodemusic.presentation.redact.views.TimecodesContainer
                android:id="@+id/timecodesHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/timecodesTitle" />

            <TextView
                android:id="@+id/addTimecodeButton"
                style="@style/BlueTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_simple_add"
                android:drawablePadding="20dp"
                android:paddingVertical="14dp"
                android:text="@string/podcast_add_timecode"
                app:layout_constraintTop_toBottomOf="@id/timecodesHolder" />

            <TextView
                android:id="@+id/timecodeHint"
                style="@style/SmallTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/podcast_timecodes_hint"
                app:layout_constraintTop_toBottomOf="@id/addTimecodeButton" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="36dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timecodeHint"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>